fixed the bottom links section alignment

--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ body {
   background-color: #000000;
 }
 
-/* HEADERS */
+/* Header, Paragraphs, Links */
 
 h1 {
-  font-size: 1em;
+  font-size: 1vw;
   font-family: 'Times New Roman', Times, serif;
   color: #f7f4f5;
   text-align: left;
@@ -43,8 +43,6 @@ h4 {
   padding-bottom: 5%;
 }
 
-/* paragraphs, links and pictures */
-
 p {
   font-size: 1.3vw;
   font-family: 'Times New Roman', Times, serif;
@@ -54,7 +52,6 @@ p {
   margin-bottom: 1px;
   padding-left: 10%;
 }
-
 a {
   color: rgb(0, 255, 242);
   font-size: 22px;
@@ -66,16 +63,7 @@ a {
   padding-left: 10%;
 }
 
-img {
-    display: block;
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 90%;
-    margin: 20px auto;
-  }
-
-/* font and alignment */
+/* Alignment things */
 
 .small {
   color: #d3ffd3;
@@ -123,13 +111,7 @@ img {
   float: left;
 }
 
-.headerthing {
-    float: left;
-    margin-left: 10%;
-  }
-  
-
-/* media and contents */
+/* Content */
 
 #testVideo {
   position: absolute;
@@ -208,19 +190,33 @@ img {
   margin: 20px auto;
 }
 
-/* bottom info */
+.headerthing {
+  float: left;
+}
+
+img {
+  display: block;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 90%;
+  margin: 20px auto;
+}
+
+/* Bottom Info Section */
+
 .cinfo {
-    float: left;
-    padding-left: 8.2%;
-    width: 22.3vw;
+  float: left;
+  padding-left: 8.2%;
+  width: 22.3vw;
 }
 
 .cinfo img {
-    width: 100%;
+width: 100%;
 }
 
 .cinfo p {
-    text-align: center;
-    padding-right: 6%;
-    font-size: 28px;
+  text-align: center;
+  padding-right: 6%;
+  font-size: 28px;
 }
